--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -12,19 +12,19 @@ html {
   // 1rem = 10px - 10px/16px = 62.5%*
 
   @include respond(phone) {
-    font-size: 43.75%;
+    font-size: 47.5%;
     //1rem = 6px
     grid-template-columns: repeat(1, 1fr); // 1 columns for smol screens
   }
   @include respond(tab-port) {
-    font-size: 47.5%;
+    font-size: 50%;
     .grid {
       grid-template-columns: repeat(2, 1fr); // 1 columns for medium screens
     }
   }
 
   @include respond(tab-land) {
-    font-size: 50%;
+    font-size: 55%;
     .grid {
       grid-template-columns: repeat(2, 1fr); // 2 columns for big-smol screens
     }
