--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -32,7 +32,7 @@
   }
 
   &__text-box {
-    padding: 5rem 2.5rem;
+    padding: 1.5rem 0.5rem;
   }
 
   &__btn-box {
