--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -3,7 +3,6 @@
   width: 100%;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(auto - fit, minmax(25rem, 1fr));
   gap: 3rem;
 
   &__item {
@@ -11,7 +10,6 @@
     color: $color-grey-dark;
     padding: 1rem;
     border-radius: 0.4rem;
-    min-height: 10rem;
 
     &--1-col {
       grid-column: span 1;
